--- a/Resources/public/css/style_additions.css
+++ b/Resources/public/css/style_additions.css
@@ -1,8 +1,14 @@
 .bio-hidden {
+    display: none;
+    position: absolute;
+    top: 0.5em;
+    left: 0.5em;
     opacity: 0;
 }
 
 div.item:hover .bio-hidden {
+    display: block;
+    padding: 50px;
     opacity: 1;
 }
 
@@ -339,7 +345,7 @@ input:focus:invalid:focus, textarea:focus:invalid:focus, select:focus:invalid:fo
     height: 40px;
     padding: 10px 0;
     text-transform: uppercase;
-    width: 220px;
+    width: 240px;
     -webkit-transition: all 0.001s ease-in-out 0s;
     -moz-transition: all 0.001s ease-in-out 0s;
     -o-transition: all 0.001s ease-in-out 0s;
@@ -419,6 +425,7 @@ input:focus:invalid:focus, textarea:focus:invalid:focus, select:focus:invalid:fo
 }
 .top-bar.alt .logo span {
     background: url("../images/logo-hover.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background-position: 0 -40px;
     text-shadow: none;
 }
 .top-bar.alt .logo span {
@@ -484,6 +491,11 @@ nav select {
 #speakers {
     background: #eee !important;
 }
+
+#judges, #speakers, #team {
+    background: #eee !important;
+}
+
 #schedule {
 }
 #workshops {
@@ -1147,6 +1159,7 @@ a.instagram:hover {
 }
 .span12 .item-4 li {
     width:270px;
+    height: 540px;
 }
 .span12 .item-3 li {
     width:370px;
@@ -1216,7 +1229,7 @@ a.instagram:hover {
     display: inline-block;
     float: left;
     margin: 0;
-    padding: 0 30px 0 0 !important;
+    /*padding: 0 30px 0 0 !important;*/
 }
 .carouselslider ul li .item {
     -webkit-box-sizing: border-box;
@@ -1613,6 +1626,7 @@ a.instagram:hover {
  float: left;
  margin-left: 0 !important;
  width: 100%;
+ background:;
 }
 .top-bar .navbar .nav > li > a {
  margin: 2px 4px;
