Link footer logos.

--- a/Resources/views/partials/index/footer.html.twig
+++ b/Resources/views/partials/index/footer.html.twig
@@ -2,14 +2,12 @@
   <div class="container">
     <div class="row">
       <div class="span12 text-center">
-        
-        <a href="#">
+
+        <a href="http://startupgermany.org/">
             <img src="{{ asset("bundles/foundershubstartupweekend/images/footer-logo-sg.png") }}" alt="Startup Germany">
         </a>
         <br>
-        <a href="#">
-            <img src="{{ asset("bundles/foundershubstartupweekend/images/footer-logo-fh.png") }}" alt="Foundershub">
-        </a>
+        <img src="{{ asset("bundles/foundershubstartupweekend/images/footer-logo-fh.png") }}" alt="Foundershub">
 
         <div class="copyright">
             © {{ 'now'|date('Y') }} <a href="{{ org_url }}">{{ org }}</a>. All rights reserved.
