Update countdown wording. Fixes #4.

--- a/Resources/views/partials/index/register.html.twig
+++ b/Resources/views/partials/index/register.html.twig
@@ -3,9 +3,8 @@
   <div class="container">
     <div class="row">
       <div id="countdown"></div>
-      <div class="span12 white register-box text-center">
-        <h2 class="register-title">Tickets Available Soon!</h2>
-        <a href="#newsletter" class="btn btn-large btn-primary">Notify me!</a>
+      <div class="span12 white register-box text-center" style="margin-top: 50px">
+        <a href="#tickets" class="btn btn-large btn-primary">Buy tickets!</a>
       </div>
     </div>
     <!-- end row -->
