Display last names. Fixes #2.

--- a/Resources/views/partials/index/judges.html.twig
+++ b/Resources/views/partials/index/judges.html.twig
@@ -28,7 +28,7 @@
                                     </div>
 
                                     <div class="text-wrap">
-                                        <h3>{{ judge.firstName }}</h3>
+                                        <h3>{{ judge.firstName }} {{ judge.lastName }}</h3>
 
                                         {% if judge.occupation is defined %}
                                             <h5>{{ judge.occupation }}</h5>
