--- a/Resources/views/partials/index/mentors.html.twig
+++ b/Resources/views/partials/index/mentors.html.twig
@@ -29,7 +29,7 @@
                                     </div>
 
                                     <div class="text-wrap">
-                                        <h3>{{ mentor.firstName }}</h3>
+                                        <h3>{{ mentor.firstName }} {{ mentor.secondName }}</h3>
                                         <h5>{{ mentor.occupation }}</h5>
                                         {% if mentor.company is defined %}
                                             <h5>{{ mentor.company }}</h5>
