--- a/Resources/views/partials/index/team.html.twig
+++ b/Resources/views/partials/index/team.html.twig
@@ -29,7 +29,7 @@
                                     </div>
 
                                     <div class="text-wrap">
-                                        <h3>{{ member.firstName }}</h3>
+                                        <h3>{{ member.firstName }} {{ member.lastName }}</h3>
                                         <h5>{{ member.occupation }}</h5>
                                         {% if member.company is defined %}
                                             <h5>{{ member.company }}</h5>
