Add media sponsor type. Fixes #6.

--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -1099,6 +1099,9 @@ a.instagram:hover {
 .spnsr-logo-silver {
     max-width: 100px;
 }
+.spnsr-logo-media {
+    max-width: 100px;
+}
 
 /* News Section */
 .news-items {
