--- a/Resources/views/Page/index.html.twig
+++ b/Resources/views/Page/index.html.twig
@@ -1,100 +1,6 @@
-{% set org = "Founders​Hub" %}
-{% set org_url = "http://www.startupweekendrheinmain.de/" %}
-{# {% set title = org ~ " Startup Weekend" %} #}
-{% set title = "Startup Weekend" %}
-{% set short_description = "Welcome to FinTechCity!" %}
-{% set description = title ~ " is a 54 hour frenzy of business model creation, coding, designing, and market validation. Come share ideas, form teams, and launch startups." %}
-{% set event_start = '2015-09-25T18:00:00+02:00' %}
-{% set event_end = '2015-09-27T21:00:00+02:00' %}
-{% set contact_phone = '+491776837705' %}
-<!DOCTYPE html>
-<html lang="{{ locale }}">
-<head>
-  <!-- Basic Page Needs -->
-  <meta charset="utf-8" />
-  <title>{{ title }}</title>
-  <!-- Metas -->
-  <meta name="description" content="{{ description }}" />
-  <!-- Mobile Specific Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- Stylesheets -->
-  {% stylesheets
-  'bundles/foundershubstartupweekend/css/bootstrap.css'
-  'bundles/foundershubstartupweekend/css/bootstrap-responsive.css'
-  'bundles/foundershubstartupweekend/css/style.css'
-  'bundles/foundershubstartupweekend/css/fonts.css'
-  'bundles/foundershubstartupweekend/css/fontello.css'
-  'bundles/foundershubstartupweekend/css/jquery.countdown.css'
-  'bundles/foundershubstartupweekend/css/flexslider.css'
-  filter='cssrewrite,?uglifycss' %}
-  <link rel="stylesheet" href="{{ asset(asset_url) }}">
-  {% endstylesheets %}
-  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  <!-- Favicon and touch icons -->
-  <link rel="apple-touch-icon" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-iphone.png") }}">
-  <link rel="apple-touch-icon" sizes="76x76" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-ipad.png") }}">
-  <link rel="apple-touch-icon" sizes="120x120" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-iphone-retina.png") }}">
-  <link rel="apple-touch-icon" sizes="152x152" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-ipad-retina.png") }}">
-  <link rel="shortcut icon" href="{{ asset("bundles/foundershubstartupweekend/images/favicon.ico") }}">
-  <!-- social media -->
-  <!-- Twitter cards support -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="{{ twitter }}">
-  <meta name="twitter:title" content="{{ title }}">
-  <meta name="twitter:description" content="{{ description }}">
-  <meta name="twitter:creator" content="coderbyheart">
-  {% image '@FoundershubStartupWeekendBundle/Resources/public/images/logo.png' %}
-  <meta name="twitter:image:src" content="{{ app.request.uriForPath(asset_url) }}">
-  {% endimage %}
-  <!-- Facebook open graph support -->
-  <meta property="og:title" content="{{ title }}">
-  <meta property="og:description" content="{{ description }}">
-  <meta property="og:site_name" content="{{ title }}">
-  {% image '@FoundershubStartupWeekendBundle/Resources/public/images/logo.png' %}
-  <meta property="og:image" content="{{ app.request.uriForPath(asset_url) }}">
-  {% endimage %}
-  <meta property="og:type" content="website">
-</head>
+{% extends "FoundershubStartupWeekendBundle:Page:base.html.twig" %}
 
-<body>
-<header class="top-bar" id="topbar">
-  <div class="container">
-    <div class="row">
-      <div class="span12"><!-- logo link --><a class="logo pull-left" href="#intro" title="{{ title }}"><span></span></a>
-        <div class="navbar main-nav pull-right">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-          <nav>
-            <div class="nav-collapse collapse">
-              <ul id="mainnav" class="nav">
-                <li><a href="#about">About</a> </li>
-                <li><a href="#judges">Judges</a></li>
-                <li><a href="#venue">Venue</a> </li>
-                <li><a href="#speakers">Mentors</a></li>
-                {# <li><a href="#demo">Demo</a></li> #}
-                {% if coaches|default([])|length > 0 %}<li> <a href="#speakers">Speakers</a> </li>{% endif %}
-                {# <li><a href="#schedule">Schedule</a> </li> #}
-                {% if workshops|default([])|length > 0 %}<li><a href="#workshops">Workshops</a> </li>{% endif %}
-                {% if startupweekend_content('Sponsor')|default([])|length > 0 %}<li><a href="#sponsors">Sponsors</a> </li>{% endif %}
-                {% if news|default([])|length > 0 %}<li><a href="#news">News</a> </li>{% endif %}
-
-                <li><a href="#team">Team</a></li>
-                <li><a href="#tickets">Tickets</a></li>
-                <li><a href="#contact">Contact</a> </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-        <!-- end navbar -->
-      </div>
-    </div>
-    <!-- end row -->
-  </div>
-  <!-- end container -->
-</header>
-<!-- end top-bar -->
+{% block content %}
 
 {% include "FoundershubStartupWeekendBundle:partials:index/intro.html.twig" %}
 
@@ -134,37 +40,4 @@
 
 {% include "FoundershubStartupWeekendBundle:partials:index/footer.html.twig" %}
 <!-- end Document -->
-
-<!-- javascripts -->
-{# Minifcation breaks those shipped libs #}
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery-1.10.2.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery.mobile-1.0.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery.flexslider.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery.scrollTo.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery.parallax-1.1.3.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery.localScroll.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery.nav.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery.countdown.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery.ui.map.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/bootstrap.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/tweetie.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/custom.js") }}"></script>
-
-{% if coaches|default([])|length > 0 %}
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery.carousel.js") }}"></script>
-<script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/speakers.js") }}"></script>
-{% endif %}
-
-<script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=true"></script>
-<script type="text/javascript">
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-66046716-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-</body>
-</html>
+{% endblock content %}
