--- a/Resources/views/partials/index/news.html.twig
+++ b/Resources/views/partials/index/news.html.twig
@@ -1,4 +1,5 @@
-{% for article in news|default([]) %}
+{% set posts = startupweekend_content('Blog Post')|multisort('cfMeta.updatedAt', true) %}
+{% for post in posts|default([]) %}
     {% if loop.first %}
         <section id="news">
         <div class="container">
@@ -10,38 +11,37 @@
         </div>
         <ul class="news-items hfeed">
     {% endif %}
+    {% set pubDate = post.cfMeta.updatedAt %}
+    {% set permalink = url('startupweekend_blogpost', {'slug': post.slug}) %}
     <li class="news-item clearfix span4">
-        <div class="news-date"><span class="month">May</span> <span class="day">16</span></div>
-        <!-- end news-date -->
-        <div class="share-widget"><a href="#"><i class="iconf-facebook"></i></a> <a href="#"><i
-                        class="iconf-twitter"></i> </a>
-            <!-- end share-widget -->
+        <div class="news-date"><span class="month">{{ pubDate|date('M') }}</span> <span
+                    class="day">{{ pubDate|date('d') }}</span></div>
+        <div class="share-widget">
+            <a href="https://www.facebook.com/sharer/sharer.php?u={{ permalink|url_encode }}"><i class="iconf-facebook"></i></a>
+            <a href="https://twitter.com/home?status={{ post.title|url_encode }}:%20{{ permalink|url_encode }}%20%23swrm15"><i class="iconf-twitter"></i></a>
         </div>
         <br class="clearfix">
 
         <div class="news-entry">
-            <h3 class="entry-title">2014 Conference Will Be Held in September</h3>
+            <h3 class="entry-title">{{ post.title }}</h3>
 
-            <div class="entry-image"><img
-                        src="{{ asset("bundles/foundershubstartupweekend/images/photos/780x475-01.jpg") }}"
-                        alt="News Image"></div>
+            {# <div class="entry-image"><img
+                        src="…"
+                        alt="{{ post.title }}"></div> #}
             <div class="entry-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales tincidunt sodales. Nam tellus
-                    velit, hendrerit ac venenatis adipiscing, sollicitudin vitae orci. Vestibulum mollis pharetra metus
-                    sit amet convallis.</p>
-                <a href="#">Read full story <i class="iconf-angle-right"></i> </a></div>
-            <!-- end news-entry -->
+                {% if post.introduction is defined %}
+                    {{ post.introduction|markdown }}
+                    <p><a href="{{ permalink }}#newsitem">Read full story <i class="iconf-angle-right"></i> </a></p>
+                {% else %}
+                    {{ post.text|markdown }}
+                {% endif %}
+            </div>
         </div>
-        <!-- end span4 -->
     </li>
-    <!-- end news-item -->
     {% if loop.last %}
         </ul>
         </div>
-        <!-- end row -->
         </div>
-        <!-- end container -->
         </section>
-        <!-- end news -->
     {% endif %}
 {% endfor %}
