Use correct ticket link. Fixes #10.

--- a/Resources/views/partials/index/intro.html.twig
+++ b/Resources/views/partials/index/intro.html.twig
@@ -12,7 +12,7 @@
                   <span class="month"><b>{{ event_start|date('M') }}</b></span><span class="year">{{ event_start|date('Y') }}</span>
                   <span class="location">Frankfurt</span>
               </h3>
-              <a href="#tickets" class="btn btn-large">Get tickets</a> </div>
+              <a href="/#tickets" class="btn btn-large">Get tickets</a> </div>
           </div>
         </li>
       </ul>
